--- a/Geeks Who Drank/Geeks Who Drank-Info.plist
+++ b/Geeks Who Drank/Geeks Who Drank-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>csfds.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>com.scibilia.geekswhodrank</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -29,6 +29,13 @@
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
+	</array>
+	<key>LSApplicationCategoryType</key>
+	<string></string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>cupid-extended-normal.ttf</string>
+		<string>CupidWide-Italic.ttf</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
